add feature to mark a task as completed

--- a/src/index.html
+++ b/src/index.html
@@ -198,32 +198,32 @@
         <dialog id="task_info_dialog" class="add_new_edit_project_dialog add_new_edit_dialog">
             <div class="add_new_edit_dialog_container flex">
                 <div class="add_new_edit_dialog_main_title_container">
-                    <h2 id="info_task_dialog_main_title" data-name="info" class="add_new_edit_todo_task_dialog_main_title">Information</h2>
+                    <h2 id="info_task_dialog_main_title" data-name="info" class="add_new_edit_todo_task_dialog_main_title"></h2>
                 </div>
                 <div class="add_new_edit_todo_task_dialog_input_area task_info_dialog_info_section_container grid">
                     <div class="task_info_dialog_info_container flex">
                         <h3 class="task_info_dialog_info_title">Name:</h3>
-                        <p id="task_info_dialog_task_name" data-info="task_name" class="task_info_dialog_info">Testing to see how the user will see this section</p>
+                        <p id="task_info_dialog_task_name" data-info="task_name" class="task_info_dialog_info"></p>
                     </div>
                     <div class="task_info_dialog_info_container flex">
                         <h3 class="task_info_dialog_info_title">Description:</h3>
-                        <p id="task_info_dialog_task_description" data-info="task_description" class="task_info_dialog_info task_info_task_description">Testing to see how the user will see this section</p>
+                        <p id="task_info_dialog_task_description" data-info="task_description" class="task_info_dialog_info task_info_task_description"></p>
                     </div>
                     <div class="task_info_dialog_info_container flex">
                         <h3 class="task_info_dialog_info_title">Project:</h3>
-                        <p id="task_info_dialog_task_project" data-info="task_project" class="task_info_dialog_info">Testing to see how the user will see this section</p>
+                        <p id="task_info_dialog_task_project" data-info="task_project" class="task_info_dialog_info"></p>
                     </div>
                     <div class="task_info_dialog_info_container flex">
                         <h3 class="task_info_dialog_info_title">Due date:</h3>
-                        <p id="task_info_dialog_task_due_date" data-info="task_due_date" class="task_info_dialog_info">Testing to see how the user will see this section</p>
+                        <p id="task_info_dialog_task_due_date" data-info="task_due_date" class="task_info_dialog_info"></p>
                     </div>
                     <div class="task_info_dialog_info_container flex">
                         <h3 class="task_info_dialog_info_title">Priority:</h3>
-                        <p id="task_info_dialog_task_priority" data-info="task_priority" class="task_info_dialog_info">Testing to see how the user will see this section</p>
+                        <p id="task_info_dialog_task_priority" data-info="task_priority" class="task_info_dialog_info"></p>
                     </div>
                     <div class="task_info_dialog_info_container flex">
                         <h3 class="task_info_dialog_info_title">Status:</h3>
-                        <p id="task_info_dialog_task_status" data-info="task_status" class="task_info_dialog_info">Testing to see how the user will see this section</p>
+                        <p id="task_info_dialog_task_status" data-info="task_status" class="task_info_dialog_info"></p>
                     </div>
                     <button id="info_task_btn" class="new_edit_task_create_btn new_edit_create_btn pointer">Close</button>
                 </div>
