Add Sidebar Feature for Mobile View

--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,18 @@
             <label for="show_navbar_checkbox">
                 <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="45px" height="70" fill="none" viewBox="0 0 24 24">
                     <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 7h14M5 12h14M5 17h14"/>
-                </svg>                  
+                </svg>
             </label>
         </div>
     </header>
-    <nav class="left_side_navbar_section">
+    <nav id="left_side_navbar_section" class="left_side_navbar_section">
+        <div id="close_navbar_btn" class="close_navbar_btn flex">
+            <label for="show_navbar_checkbox">
+                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="40" height="35" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m15 9-6 6m0-6 6 6m6-3a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                  </svg>                  
+            </label>
+        </div>
         <section class="left_side_navbar_lists_container left_side_navbar_first_list_container">
             <header class="left_side_navbar_list_all_titles left_side_navbar_first_list_main_title_container icon_text_center flex">
                 <h3 class="left_side_navbar_first_list_main_title">My Tasks</h3>
